manifests/deployment.yml
apiVersion : apps/v1beta1
kind: Deployment
metadata:
  name: "kubecluster"
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: "kubecluster"
    spec:
      containers:
        - name: "kubecluster"
          image: "az204repo.azurecr.io/kubecluster"
          ports:
          - containerPort: 8080
